--- a/test/fixtures/html/html.html
+++ b/test/fixtures/html/html.html
@@ -3,7 +3,7 @@
    <head>
       <title>Go to Head</title>
       <style type="text/css"></style>
-      <style data-above-the-fold="true" type="text/css"></style>
+      <style data-above-the-fold="true"></style>
    </head>
    <body>
       <h1>Grunt plugin gotohead</h1>
